[package]
name = "red_union_find"
version = "0.1.0"
authors = ["Ken Bateman <novadenizen@gmail.com>"]
edition = "2018"
description = "red_union_find provides an implementation of the union find algorithm."
license = "LGPL-3.0"
repository = "https://github.com/NovaDenizen/red_union_find.git" 
documentation = "https://docs.rs/red_union_find"


[dependencies]
num = "0.3"

[dev-dependencies]
rand = "0.7"
